src/objects/UGI_Subsidiary__c.object
<CustomObject>
    <fields>
        <fullName>AmeriGas__c</fullName>
        <label>AmeriGas</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Antargaz_Finagaz__c</fullName>
        <label>Antargaz/Finagaz</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avantigas__c</fullName>
        <label>Avantigas</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree_of_Centralization_Score__c</fullName>
        <formula>IF(ISPICKVAL(Degree_of_Centralization__c,&apos;Low&apos;),1,
IF(ISPICKVAL(Degree_of_Centralization__c,&apos;Medium&apos;),2,
IF(ISPICKVAL(Degree_of_Centralization__c,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Degree of Centralization Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_of_Centralization__c</fullName>
        <label>Degree of Centralization</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Degree_of_Process_Score__c</fullName>
        <formula>IF(ISPICKVAL( Degree_of_Process_or_Systems_Change__c ,&apos;Low&apos;),1,
IF(ISPICKVAL( Degree_of_Process_or_Systems_Change__c ,&apos;Medium&apos;),2,
IF(ISPICKVAL( Degree_of_Process_or_Systems_Change__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Degree of Process Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_of_Process_or_Systems_Change__c</fullName>
        <label>Degree of Process or Systems Change</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extent_of_Automation_Score__c</fullName>
        <formula>IF(ISPICKVAL( Extent_of_Automation__c ,&apos;Low&apos;),1,
IF(ISPICKVAL( Extent_of_Automation__c ,&apos;Medium&apos;),2,
IF(ISPICKVAL( Extent_of_Automation__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extent of Automation Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extent_of_Automation__c</fullName>
        <label>Extent of Automation</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extent_of_Ext_Party_Involve_Score__c</fullName>
        <formula>IF(ISPICKVAL( Extent_of_External_Party_Involvement__c ,&apos;Low&apos;),1,
IF(ISPICKVAL( Extent_of_External_Party_Involvement__c ,&apos;Medium&apos;),2,
IF(ISPICKVAL( Extent_of_External_Party_Involvement__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extent of Ext Party Involve Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extent_of_External_Party_Involvement__c</fullName>
        <label>Extent of External Party Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flaga__c</fullName>
        <label>Flaga</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>History_of_Deficiencies_Score__c</fullName>
        <formula>IF(ISPICKVAL( History_of_Deficiencies__c ,&apos;Low&apos;),1,
IF(ISPICKVAL( History_of_Deficiencies__c ,&apos;Medium&apos;),2,
IF(ISPICKVAL( History_of_Deficiencies__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>History of Deficiencies Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History_of_Deficiencies__c</fullName>
        <label>History of Deficiencies</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Holding_Company__c</fullName>
        <label>Holding Company</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Complexity_Score__c</fullName>
        <formula>IF(ISPICKVAL(Overall_Complexity__c,&apos;Low&apos;),1,
IF(ISPICKVAL(Overall_Complexity__c,&apos;Medium&apos;),2,
IF(ISPICKVAL(Overall_Complexity__c,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Complexity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Complexity__c</fullName>
        <label>Overall Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Score__c</fullName>
        <label>Overall Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>UGI_Process__c</referenceTo>
        <relationshipName>Subsidiaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Adequacy_Score__c</fullName>
        <formula>IF(ISPICKVAL( System_Adequacy__c ,&apos;Low&apos;),1,
IF(ISPICKVAL( System_Adequacy__c ,&apos;Medium&apos;),2,
IF(ISPICKVAL( System_Adequacy__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Adequacy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Adequacy__c</fullName>
        <label>System Adequacy</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>Overall_Complexity_Score__c +
 Degree_of_Centralization_Score__c +
 Extent_of_Automation_Score__c +
 Transaction_Volume_Score__c +
 History_of_Deficiencies_Score__c +
 Degree_of_Process_Score__c +
 Extent_of_Ext_Party_Involve_Score__c +
 System_Adequacy_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Volume_Score__c</fullName>
        <formula>IF(ISPICKVAL( Transaction_Volume__c ,&apos;Low&apos;),1,
IF(ISPICKVAL( Transaction_Volume__c ,&apos;Medium&apos;),2,
IF(ISPICKVAL( Transaction_Volume__c ,&apos;High&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Volume Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Volume__c</fullName>
        <label>Transaction Volume</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UGI_Energy_Services__c</fullName>
        <label>UGI Energy Services</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UGI_Utilities__c</fullName>
        <label>UGI Utilities</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>UGI Subsidiary</label>
    <nameField>
        <label>Sub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>